// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="radio"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      >
        <i
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </i>
      </span>
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;

exports[`Radio should render correctly 2`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="radio"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      >
        <i
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </i>
      </span>
      <span
        class="rmd-ripple-container"
      />
    </span>
    <label
      class="rmd-label"
      for="radio"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Radio should render correctly 3`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <label
      class="rmd-label"
      for="radio"
    >
      Label
    </label>
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="radio"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      >
        <i
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </i>
      </span>
      <span
        class="rmd-ripple-container"
      />
    </span>
  </div>
</div>
`;

exports[`Radio should render correctly 4`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle rmd-toggle--disabled"
    >
      <input
        class="rmd-toggle__input"
        disabled=""
        id="radio"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--disabled rmd-toggle__icon--overlay"
      >
        <i
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </i>
      </span>
      <span
        class="rmd-ripple-container"
      />
    </span>
    <label
      class="rmd-label rmd-label--disabled"
      for="radio"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Radio should render correctly 5`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <span
      class="rmd-toggle"
    >
      <input
        class="rmd-toggle__input"
        id="radio"
        type="radio"
        value="a"
      />
      <span
        class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
      >
        <i
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </i>
      </span>
      <span
        class="rmd-ripple-container"
      />
    </span>
    <label
      class="rmd-label rmd-label--error"
      for="radio"
    >
      Label
    </label>
  </div>
</div>
`;
